--- a/AtividadeCorreios/AtividadeCorreios/Content/styles.css
+++ b/AtividadeCorreios/AtividadeCorreios/Content/styles.css
@@ -6,16 +6,18 @@
 	top: 38px;
 }
 body {
-	background-image: url('https://image.freepik.com/vetores-gratis/reuniao-de-negocios-no-escritorio-da-empresa_81522-3945.jpg');
-	background-size: auto auto;
-
+	background-image: url('https://c1.staticflickr.com/4/3791/10587473905_7174892a49_b.jpg');
+	background-size: cover;
 }
 #BotaoConsultar {
-	margin-left: 83%;
+	margin-left: 15%;
 	font-size: 14px;
 	font-family: sans-serif;
 }
 #Form {
+	padding: 1em;
+	border: 1px solid #CCC;
+	border-radius: 1em;
 	padding: 66px;
 	background: #EEEEEE;
 }
@@ -24,7 +26,39 @@ input {
 }
 
 #MeuSelect {
-	margin-left: 76%;
+	margin-left: 0%;
+}
+
+#titulo {
+
+	font-size: 41px;
+	color: #066a75;
+	padding: 2px 0 10px 0;
+	font-family: Arial,sans-serif;
+	font-weight: bold;
+	text-align: center;
+	padding-bottom: 30px;
+}
+label {
+	/*Para ter certeza que todas as labels tem o mesmo tamanho e estão propriamente alinhadas */
+	display: inline-block;
+	width: 90px;
+	text-align: right;
+}
+
+.bnt {
+	margin-left: -1px;
 }
 
 
+input, textarea {
+	/* Para certificar-se que todos os campos de texto têm as mesmas configurações de fonte. Por padrão, textareas ter uma fonte monospace*/
+	font: 1em sans-serif;
+	/* Para dar o mesmo tamanho a todos os campo de texto */
+	width: 300px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	margin-left: 52px;
+	/* Para harmonizar o look & feel das bordas nos campos de texto*/
+	border: 1px solid #999;
+}
